refactor codebase for variable consistency, add 'calculate-at-operand' functionality, and set a height for the 'screen'

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     background-color: lightgreen;
     padding: 2% 5%;
     text-align: right;
+    height: 58px;
     font-size: 50px;
 }
 
